--- a/style.css
+++ b/style.css
@@ -12,24 +12,66 @@ html {
     scroll-behavior: smooth;
 }
 
+#scroll-clip {
+    position: absolute;
+    width: 100%;
+    height: 4000px;
+    overflow-x: hidden;
+}
+
 body {
     background-color: #110f0d;
     height: 4000px;
     width: 100vw;
     margin: 0;
-    /* padding-top: 10%; */
-    /* overflow-x: hidden; */
+}
+
+.white-bg-section {
+    position: absolute;
+    top: 40vh;
+    width: 100%;
+    height: 3600px;
+    background-color: #FFFFFF;
+    border-radius: 8vw 0 8vw 0;
+    z-index: -3;
+    padding-bottom: 20%;
+}
+
+#model {
+    width: 100%;
+    height: 40%;
+    left: 0%;
+    top: 48vh;
+    position: fixed;
+    z-index: 1;
+}
+
+canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.textbox {
+    width: 100%;
+    /* margin-bottom: 10%; */
+    /* position: absolute; */
+    top: 0;
+    justify-content: center;
+    align-content: center;
+    margin-bottom: 10%;
 }
 
 h1 {
     margin: 8%;
     margin-top: 20%;
-    margin-bottom: 20%;
+    margin-bottom: 10%;
     /* font-family: 'Noto Serif', Courier, monospace; */
     font-family: 'DM Sans', sans-serif;
     font-weight: 700;
     font-size: 11vw;
     color: #FFFFFF;
+    /* color: rgb(120, 12, 203); */
     text-align: center;
 }
 
@@ -42,7 +84,6 @@ h2 {
     margin-bottom: 2%;
     padding: 0;
     margin: 0;
-    
 }
 
 p {
@@ -51,22 +92,6 @@ p {
     font-weight: 400;
     font-size: 4vw;
     color: #110f0d;
-}
-
-.white-bg-section {
-    width: 100%;
-    height: 3600px;
-    overflow-x: hidden;
-    background-color: #FFFFFF;
-    border-radius: 8vw 0 8vw 0;
-    z-index: -3;
-    padding-bottom: 20%;
-}
-
-.textbox {
-    width: 100%;
-    justify-content: center;
-    align-content: center;
 }
 
 hr {
@@ -148,20 +173,7 @@ hr.floater.inview {
     left: 15%;
 }
 
-#model {
-    width: 100%;
-    height: 40%;
-    left: 0%;
-    top: 48vh;
-    position: fixed;
-    z-index: 1;
-}
 
-canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-}
 
 @media only screen and (min-width: 600px) { /* Tablet Styling */
 
@@ -172,7 +184,7 @@ canvas {
     
     .textbox {
         width: 50%;
-        margin-top: 10%;
+        margin: 30vh 0 0 1vw;
     }
 
     h1 {
@@ -181,8 +193,10 @@ canvas {
     }
 
     .white-bg-section {
-        margin-top: -33%;
-        padding-top: 33%;
+        margin-top: 0vh;
+        padding-top: 0vh;
+        position: fixed;
+        top: 10vh;
     }
 
     #model {
@@ -193,21 +207,26 @@ canvas {
     }
 
     .navbar {
-        width: 45%;
+        padding: 0;
+        margin: 1.5vw 0 0 0;
+        width: 60%;
         height: 10%;
 
         top: 0;
         left: 50%;
         transform: translateX(-50%);
-
-
     }
 
     .menu-item {
         margin: 1vw;
+
+        color: #FFFFFF;
     
         font-size: 2vw;
-        border: 0.2vw solid #110f0d;
+        text-decoration: underline;
+        text-underline-offset: 0.5vw;
+
+        border: none;
     }
 
     .floater:not(hr) {
@@ -215,7 +234,7 @@ canvas {
         position: relative;
         margin-top: 10vh;
         padding-left: 3%;
-        width: 70%;
+        width: 40%;
         border-left: 1vw solid black;
     
         transition: 0.15s all ease-out;
