--- a/style.css
+++ b/style.css
@@ -13,16 +13,18 @@ html {
 }
 
 #scroll-clip {
-    position: absolute;
-    width: 100%;
+    /* position: relative; */
+    top: 0;
+    left: 0;
+    width: 100vw;
     height: 4000px;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 body {
     background-color: #110f0d;
-    height: 4000px;
-    width: 100vw;
+    /* height: 4000px; */
     margin: 0;
 }
 
@@ -92,6 +94,10 @@ p {
     font-weight: 400;
     font-size: 4vw;
     color: #110f0d;
+}
+
+.spacer {
+    height: 8vh;
 }
 
 hr {
@@ -174,10 +180,9 @@ hr.floater.inview {
 }
 
 
-
 @media only screen and (min-width: 600px) { /* Tablet Styling */
 
-  }
+}
 
 
 @media only screen and (min-width: 768px) { /* Desktop Styling */
@@ -190,6 +195,14 @@ hr.floater.inview {
     h1 {
         font-size: 5vw;
         color: #110f0d;
+    }
+
+    h2 {
+        font-size: 2vw;
+    }
+
+    .spacer {
+        height: 20vh;
     }
 
     .white-bg-section {
@@ -224,20 +237,44 @@ hr.floater.inview {
         color: #FFFFFF;
     
         font-size: 3vh;
+        font-weight: 700;
         text-decoration: underline;
+        text-decoration-thickness: 0.3vh;
         text-underline-offset: 0.5vh;
 
         border: none;
     }
 
-    .floater:not(hr) {
-        display: grid;
-        position: relative;
-        margin-top: 10vh;
-        padding-left: 3%;
-        width: 40%;
-        border-left: 1vw solid black;
-    
-        transition: 0.15s all ease-out;
+    p {
+        /* margin-top: 2%; */
+        /* font-family: 'DM Sans',  Helvetica,  sans-serif; */
+        /* font-weight: 400; */
+        font-size: 1vw;
+        /* color: #110f0d; */
     }
+
+    .floater:not(hr) {
+        /* display: grid; */
+        /* position: relative; */
+        margin-top: 15vh;
+        padding-left: 1vw;
+        width: 35vw;
+        /* z-index: 0; */
+        border-left: 0.4vw solid black;
+    
+        /* transition: 0.15s all ease-out; */
+    }
+    
+    .floater.left {
+        left: 10%;
+    }
+    
+    .floater.right {
+        left: 10%;
+    }
+
+    .floater.inview:not(hr) {
+        left: 10%;
+    }
+    
 }
