--- a/style.css
+++ b/style.css
@@ -40,8 +40,8 @@ body {
 }
 
 #model {
-    width: 100%;
-    height: 40%;
+    width: 100vw;
+    height: 80vw;
     left: 0%;
     top: 48vh;
     position: fixed;
