--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
     width: 100vw;
     height: 80vw;
     left: 0%;
-    top: 48vh;
+    top: 40vh;
     position: fixed;
     z-index: 1;
 }
@@ -56,8 +56,6 @@ canvas {
 
 .textbox {
     width: 100%;
-    /* margin-bottom: 10%; */
-    /* position: absolute; */
     top: 0;
     justify-content: center;
     align-content: center;
@@ -66,7 +64,7 @@ canvas {
 
 h1 {
     margin: 8%;
-    margin-top: 20%;
+    margin-top: 10vh;
     margin-bottom: 10%;
     /* font-family: 'Noto Serif', Courier, monospace; */
     font-family: 'DM Sans', sans-serif;
@@ -124,7 +122,7 @@ hr.floater.inview {
     flex-direction: row;
     justify-content: center;
 
-    margin: 0 0 2vh 0;
+    margin: 0 0 1.2vh 0;
     padding: 4vw;
     
     position: fixed;
