--- a/style.css
+++ b/style.css
@@ -17,13 +17,14 @@ html {
     position: relative;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 4000px;
     overflow-x: hidden;
     overflow-y: hidden;
 }
 
 body {
+    background: #001b40;
     background-image: linear-gradient(30deg, #511538 85%, #001b40 100%); 
     height: auto;
     margin: 0;
@@ -98,6 +99,15 @@ p {
     height: 8vh;
 }
 
+.scroll-icon {
+    position: fixed;
+    overflow: visible;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 75vh;
+    width: 5vh;
+}
+
 hr {
     margin-top: 18%;
     height: 0.5vh;
@@ -143,7 +153,7 @@ hr.floater.inview {
     margin: 3vw 3.5vw 3vw 3.5vw;
 
     font-family: 'DM Sans', Helvetica, sans-serif;
-    font-weight: 400;
+    font-weight: 700;
 
     font-size: 4vw;
     color:#FFFFFF;
@@ -187,7 +197,7 @@ hr.floater.inview {
 }
 
 
-@media only screen and (min-width: 600px) { /* was 768px Desktop Styling */
+@media only screen and (min-width: 600px) { /* was: (768px Desktop Styling) */
     
     .textbox {
         width: 50%;
