--- a/style_gallery.css
+++ b/style_gallery.css
@@ -94,42 +94,28 @@ p {
 }
 
 .textbox {
-    margin-top: 8vh;
+    margin-top: 10vh;
+    margin-bottom: 2vh;
 }
 
 h1 {
     font-size: 10vw;
+
+    /* background-image: linear-gradient(130deg, #511538 40%, #001b40 100%); */
+    /* background-clip: text; */
+    /* -webkit-text-fill-color: transparent; */
+
 }
 
 h2 {
-    color: black;
-    font-size: 2vw;
+    color: #110f0d;
+    font-size: 1.5vw;
 }
-
 
 p {
     font-size: 1.3vw;
     margin: 0.5vh 20vw 3vh 20vw;
 }
-
-figure {
-    /* position: relative; */
-    /* overflow: scroll; */
-    /* display: table; */
-    /* left: 50%; */
-    /* transform: translateX(-50%); */
-    /* margin: 0 5vw 0 5vw; */
-    /* width: auto; */
-    /* max-height: 60vh; */
-    /* max-width: 80vw; */
-    /* min-height: 50vh; */
-    /* min-width: 50vw; */
-    /* height: 50vh; */
-    /* width: 50vw; */
-    margin: 0;
-    padding:0;
-}
-
 
 .portrait {
     height: calc(90vw * 16/9);
