--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ html {
     top: 0;
     left: 0;
     width: 100%;
-    height: 4000px;
+    height: fit-content;
+    /* height: 4000px; */
     overflow-x: hidden;
     overflow-y: hidden;
 }
@@ -96,7 +97,7 @@ p {
 }
 
 .spacer {
-    height: 8vh;
+    /* height: 8vh; */
 }
 
 .scroll-icon {
