--- a/style_gallery.css
+++ b/style_gallery.css
@@ -1,9 +1,12 @@
 body {
+    /*  \/ needed because app.js isnt included in gallery to covert this back from loading page */
+    overflow: auto;
     background-image: linear-gradient(30deg, #511538 92%, #001b40 100%); 
 }
 
 #scroll-clip {
-    height: fit-content;
+    visibility: visible;
+    height: fit-content
 }
 
 .white-bg-section {
@@ -66,8 +69,9 @@ p {
 
 .navbar {
     box-shadow: 0 0 1.5vw 0 #ffffff24;
-}
+    visibility: visible;
 
+}
 
 .shadow {
     position: fixed;
