--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ p {
 }
 
 
+/* 
 .scroll-icon {
     position: fixed;
     overflow: visible;
@@ -135,7 +136,8 @@ p {
     transform: translateX(-50%);
     top: 75vh;
     width: 5vh;
-}
+} 
+*/
 
 hr {
     margin-top: 18%;
