--- a/style.css
+++ b/style.css
@@ -222,6 +222,11 @@ hr.floater.inview {
     left: 15%;
 }
 
+#dizzy-text {
+    text-align: center;
+    margin-bottom: 17vh;
+}
+
 
 @media only screen and (min-width: 600px) { /* Tablet Styling */
 
@@ -261,7 +266,7 @@ hr.floater.inview {
     }
 
     h2 {
-        font-size: 2vw;
+        font-size: 2.1vw;
     }
 
     .spacer {
@@ -306,7 +311,7 @@ hr.floater.inview {
     }
 
     p {
-        font-size: 1vw;
+        font-size: 1.2vw;
     }
 
     .floater:not(hr) {
