--- a/style_contact.css
+++ b/style_contact.css
@@ -35,13 +35,17 @@ p {
     /* border-left: 0.6vw solid #78618d; */
 }
 
+#contact-container {
+    display: flex;
+    flex-direction: column;
+}
+
 .contact-photo {
     position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    margin: 10vh 0 6vh 0;
+    align-self: center;
+    margin: 4vh 0 2vh 0;
     /* width: 20vw; */
-    height: 40vh;
+    height: 50vh;
     /* border: 1vw solid black; */
     border-radius: 2.5vh;
     box-shadow: 0px 0px 6vw 0vw rgba(0, 0, 0, 0.25);
@@ -49,18 +53,19 @@ p {
 
 svg {
 display:inline;
+scale: 80%;
 }
 
 a {
     position: relative;
     display: inline;
-    font-size: 130%;
+    font-size: 100%;
     font-weight: 700;
     font-family: 'DM Sans', Helvetica, sans-serif;
     color: black;
     text-decoration: none;
     /* text-decoration-thickness: 0.8vw; */
-    margin-left: 2vw;
+    margin-left: 1vw;
 }
 
 
@@ -69,7 +74,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 1.2vh 0 0 0;
+    margin: 0;
     left: 50%;
     transform: translateX(-50%);
     width: 90vw;
@@ -79,10 +84,9 @@ a {
     padding: 1vw;
 }
 
-.email {
-    margin: 0;
-    /* font-size: 130%; */
-    margin: auto;
+.navbar {
+    box-shadow: 0 0 1.5vw 0 #ffffff24;
+    visibility: visible;
 }
 
 
@@ -90,7 +94,29 @@ a {
 }
 
 @media only screen and (min-width: 600px) { /* was: (768px Desktop Styling) */
+    #contact-container {
+        flex-direction: row;
+        margin: 18vh 20vw 18vh 20vw; 
+    }
+
     .contact-photo {
-        margin: 18vh 0 6vh 0;
+        margin: 0;
+        height: 60vh;
+
+    }
+
+    .contact-button {
+        justify-content: left;
+        margin: 1vw 0 3vh 2vw;
+        width: 100%;
+        padding: 0;
+    }
+
+    svg {
+        scale: 100%;
+    }
+
+    a {
+        font-size: 130%;
     }
 }
