--- a/portfolio_cesium.css
+++ b/portfolio_cesium.css
@@ -7,228 +7,131 @@ html {
 }
 
 #loading-page {
-    position: absolute;
+    position: fixed;
     visibility: visible;
-    /* background-color: white; */
-    padding-top: 40%;
+    background-color: white;
+    padding-top: 20vh;
     top: 0;
     left: 0;
     height: 100%;
     width: 100%;
+    text-align: center;
+
 }
 
 .loading-bar {
     margin-top: 5vh;
+    padding: 0.3vh;
+
     position: relative;
     left: 50%;
     transform: translateX(-50%);
-    height: 3vh;
+
+    height: 2.5vh;
+    width: 30%;
+
+    border: 0.3vw solid black;
     border-radius: 999px;
-    border: 1vw solid white;
-    width: 60%;
-    padding: 0.5vh;
 }
 
 .loading-bar-fill {
     border-radius: 999px;
-    background-color: white;
+    background-color: black;
     height: 100%;
     width: 0%
 }
 
 #scroll-clip {
+    padding: 10vw;
     visibility: hidden;
     position: relative;
     top: 0;
     left: 0;
     width: 100%;
     height: fit-content;
-    /* height: 4000px; */
     overflow-x: hidden;
     overflow-y: hidden;
 }
 
 body {
-    background: #001b40;
-    background-image: linear-gradient(30deg, #511538 60%, #001b40 100%); 
+    background: #ffffff;
     overflow: hidden;
     margin: 0;
 }
 
-.white-bg-section {
-    position: absolute;
-    /* top: 40vh; */
-    width: 100%;
-    height: 100%;
-    background-color: #FFFFFF;
-    border-radius: 8vw 0 8vw 0;
-    box-shadow: 0px 0px 10vw 0vw #000e2270;
-    z-index: -3;
+.bg-color-section {
+    background-color: darkblue;
 }
 
 .flexbox{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    margin-bottom: 3vw;
+    gap: 3vw;
     width: 100%;
+    /* border: 2px solid rgba(0, 0, 255, 0.1); */
 }
 
-.contact-photo {
-    position: relative;
-    align-self: center;
-    margin: 0vh auto 0vh auto;
-    /* width: 20vw; */
-    height: 50vh;
-    /* border: 1vw solid black; */
-    border-radius: 2.5vh;
-    box-shadow: 0px 0px 6vw 0vw rgba(0, 0, 0, 0.25);
+.flexitem-half{
+    flex: 1 1 0;
+    overflow: visible;
+    /* border: solid 1px rgba(255, 0, 0, 0.1); */
 }
+
 
 #model {
-    width: 100%;
-    height: 80vw;
     position: relative;
-    z-index: 1;
+    top: -4vw;
+    width: 100%;
+    height: 25vw;
 }
 
-canvas {
-    margin: 10px;
-    /* position: relative; */
-    /* top: 0; */
-    /* left: 0; */
-}
 
 h1 {
-    margin: 0 0 0 5vw;
-    font-family: 'DM Sans', sans-serif;
-    font-weight: 700;
-    font-size: 11vw;
-    color: #FFFFFF;
-    text-shadow: 0 0 3vw #000e22;
-    text-align: center;
+    margin: 0 0 5vh 0;
+    font-family: 'DM Sans', Helvetica, sans-serif;
+    font-weight: 900;
+    font-size: 4.5vw;
+    line-height: 1.2;
+    color: #110f0d;
+
 }
 
 h2 {
-    font-family: 'DM Sans',  Helvetica,  sans-serif;
-    font-weight: 700;
-    font-size: 5vw;
-    color: #110f0d;
-    margin: 0;
-    margin-top: 2%;
-    margin-bottom: 2%;
+    margin: 0 0 2vh 0;
+    font-family: 'DM Sans', Helvetica, sans-serif;
+    font-weight: 600;
+    font-size: 2.1vw;
+    color: #1a1a1a;
     padding: 0;
-    margin: 0;
 }
 
 p {
-    margin-top: 2%;
-    font-family: 'DM Sans',  Helvetica,  sans-serif;
-    font-weight: 400;
-    font-size: 4vw;
-    color: #110f0d;
-}
-
-.portrait {
-    height: calc(90vw * 16/9);
-    width: 90vw;
-}
-
-.landscape { 
-    height: calc(90vw * 9/16);
-    width: 90vw;
+    margin: 0 0 0 0;
+    font-family: 'DM Sans', Helvetica, sans-serif;
+    font-weight: 200;
+    font-size: 1.2vw;
+    color: #1a1a1a;
 }
 
 .gallery-item {
     position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    
-    max-width: 90vw;
-    margin: 2vh 0 0 0;
-    border-radius: 2.5vw;
-    box-shadow: 0px 0px 6vw 0vw rgba(0, 0, 0, 0.25);
+    max-width: 100%;
+
+    border-radius: 1vw;
+    box-shadow: 0px 0px 1vw 0vw rgba(0, 0, 0, 0.2);
+}
+
+/* FOR YOUTUBE VIDS */
+
+.landscape {
     border: none;
+    width: 100%;
+    aspect-ratio: 16 / 9;
 }
 
+.portrait {
+    border: none;
+    width: 100%;
+    aspect-ratio: 9 / 16;
 
-
-
-@media only screen and (min-width: 600px) { /* Tablet Styling */
-
-}
-
-
-@media only screen and (min-width: 600px) { /* was: (768px Desktop Styling) */
-    body {
-        background-image: linear-gradient(30deg, #511538 85%, #001b40 100%); 
-    }
-
-    #loading-page {
-        padding-top: 20vh;
-    }
-
-    .loading-text {
-        color: white;
-    }
-
-    .loading-bar {
-        height: 2.5vh;
-        border: 0.2vw solid white;
-        padding: 0.3vh;
-        width: 30%;
-    }
-
-    .flexbox{
-        display: flex;
-        flex-direction: row;
-    }
-
-    .contact-photo {
-
-    }
-
-    h1 {
-        font-size: 5vw;
-        color: #110f0d;
-        text-shadow: none;
-    }
-
-    h2 {
-        font-size: 2.1vw;
-    }
-
-    .spacer {
-        height: 20vh;
-    }
-
-    .white-bg-section {
-        /* margin-top: 0vh; */
-        /* padding-top: 0vh; */
-        /* top: 0vh; */
-    }
-
-    #model {
-    }
-
-    p {
-        font-size: 1.2vw;
-    }
-
-    .portrait {
-        width: calc(80vh * 9/16);
-        height: 80vh;
-    }
-    
-    .landscape {
-        width: 70vw;
-        height: calc(70vw * 9/16);
-    }
-    
-    .gallery-item {
-        margin: 2vh 0 0 0;
-        max-width: 70vw;
-        max-height: 80vh;
-        border-radius: 2.5vw;
-        box-shadow: 0px 0px 6vw 0vw rgba(0, 0, 0, 0.25);
-    }
 }
