--- a/portfolio_cesium.css
+++ b/portfolio_cesium.css
@@ -42,7 +42,7 @@ html {
 }
 
 #scroll-clip {
-    padding: 10vw;
+    padding: 10vw 12vw 10vw 12vw;
     visibility: hidden;
     position: relative;
     top: 0;
@@ -87,30 +87,32 @@ body {
 
 
 h1 {
-    margin: 0 0 5vh 0;
+    margin: 0 0 3vw 0;
     font-family: 'DM Sans', Helvetica, sans-serif;
     font-weight: 900;
-    font-size: 4.5vw;
+    font-size: 4.4vw;
     line-height: 1.2;
-    color: #110f0d;
+    color: #282828;
 
 }
 
 h2 {
-    margin: 0 0 2vh 0;
+    margin: 0 0 0.8vw 0;
     font-family: 'DM Sans', Helvetica, sans-serif;
     font-weight: 600;
     font-size: 2.1vw;
+    line-height: 1.15;
     color: #1a1a1a;
     padding: 0;
 }
 
-p {
+p, ol, a {
     margin: 0 0 0 0;
     font-family: 'DM Sans', Helvetica, sans-serif;
     font-weight: 200;
+    /* font-size: clamp(0.8rem, 1.2vw 1.2rem); */
     font-size: 1.2vw;
-    color: #1a1a1a;
+    color: #070707;
 }
 
 .gallery-item {
@@ -118,7 +120,7 @@ p {
     max-width: 100%;
 
     border-radius: 1vw;
-    box-shadow: 0px 0px 1vw 0vw rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 5px 2vw 0vw rgba(0, 0, 0, 0.15);
 }
 
 /* FOR YOUTUBE VIDS */
