--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ html {
     /* background-color: black; */
 }
 
+body {
+    font-family: 'DM Sans',  Helvetica,  sans-serif;
+}
+
 #loading-page {
     position: absolute;
     visibility: visible;
@@ -99,7 +103,6 @@ canvas {
 
 h1 {
     margin: 0;
-    font-family: 'DM Sans', sans-serif;
     font-weight: 700;
     font-size: 11vw;
     color: #FFFFFF;
@@ -108,7 +111,6 @@ h1 {
 }
 
 h2 {
-    font-family: 'DM Sans',  Helvetica,  sans-serif;
     font-weight: 700;
     font-size: 5vw;
     color: #110f0d;
@@ -119,13 +121,25 @@ h2 {
     margin: 0;
 }
 
+
 p {
     margin-top: 2%;
-    font-family: 'DM Sans',  Helvetica,  sans-serif;
     font-weight: 400;
     font-size: 4vw;
     color: #110f0d;
 }
+
+.project-link {
+    font-size: 4vw;
+    color: #110f0d;
+}
+
+.project-link-bold {
+    font-weight: 700;
+    font-size: 5vw;
+    color: #110f0d;
+}
+
 
 
 hr {
@@ -213,7 +227,8 @@ hr.floater.inview {
 
 #dizzy-text {
     text-align: center;
-    margin-bottom: 17vh;
+    margin: 0 5vw 17vh 5vw;
+
 }
 
 
@@ -254,7 +269,7 @@ hr.floater.inview {
         text-shadow: none;
     }
 
-    h2 {
+    h2, .project-link-bold {
         font-size: 2.1vw;
     }
 
@@ -299,7 +314,7 @@ hr.floater.inview {
         border: none;
     }
 
-    p {
+    p, .project-link {
         font-size: 1.2vw;
     }
 
